<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="picture">Picture</string>
    <string name="capture">Launch Camera</string>
    <string name="app_name">My Visited Places</string>
    <string name="intro">Capture a picture to crop!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_description">Splash</string>
    <string name="add_place">Add Visited Place</string>
    <string name="name">Name:</string>
    <string name="purpose">Purpose:</string>
    <string name="address">Address:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="closeDay">Start Day:</string>
    <string name="openTime">End Day:</string>
    <string name="description">Notes:</string>
    <string name="enter_name">name</string>
    <string name="enter_address">address</string>
    <string name="enter_latitude">latitude</string>
    <string name="enter_longitude">longitude</string>
    <string name="btnSave">Save</string>
    <string name="btnImage">Take Photo</string>
    <string name="place_list">Visited Places</string>
    <string name="place_viewed">Details</string>
    <string name="google_map">Google Map</string>
    <string name="addPlace">Add Place</string>
    <string name="btn_text_camera">Take Photo From Gallery</string>
    <string name="title_activity_google_map">Google Map</string>
    <string name="spltext">Your Journey </string>
    <string name="splashtext">Partner</string>
    <string name="title">Trip List</string>

</resources>